Improve the Target identification section.

--- a/thesis/tex/SSVEP_BCI.tex
+++ b/thesis/tex/SSVEP_BCI.tex
@@ -58,7 +58,7 @@ As already discussed in the previous section, the application does not have one 
 
 As seen in figure~\ref{fig:signal_pipeline}, \texttt{length} is the \gls{window} length and it shows how long filtered signal is held in memory. \texttt{Step} on the other hand shows how many packets have to be received before trying to identify user's choice. If \texttt{step} is smaller than \texttt{length} then the \gls{window} is overlapping which means that some of the data that was used in previous \gls{feature extraction} will also be used in the next \gls{feature extraction}. If \texttt{step} is equal to \texttt{length}, then every consecutive \gls{feature extraction} uses only new data that has not been analysed by previous \glspl{feature extraction}. It would not make sense to use larger \texttt{step} than \texttt{length}, because then some of the data will not be analysed and in this case the \gls{target} detection would be slower.
 
-After receiving \texttt{step} packets, the whole filtered signal will be first \glsdisp{detrend}{detrended} and then \glsdisp{window}{windowed}. \glsdisp{detrend}{Detrending} and \glsdisp{window}{windowing} were thoroughly discussed in sections~\ref{sec:detrend} and \ref{sec:window} respectively. Since some data is deleted and new data is added to the signal after every step, the \glsdisp{window}{windowing} cannot be performed only on the previously received signal segment, but has to be performed on the whole signal every time. \glsdisp{detrend}{Detrending} could be performed only on the previously received signal segment, but using it on the whole signal gives more possibilities since the same result as using it only on the signal segment can be achieved by dividing the \glsdisp{detrend}{detrending} of the whole signal into segments with suitable length. In the application this division can be achieved by giving the \texttt{break} parameter which shows how many breakpoints to use that divide the signal into equal length segments.
+After receiving \texttt{step} packets, the whole filtered signal will be first \glsdisp{detrend}{detrended} and then \glsdisp{window}{windowed}. \glsdisp{detrend}{Detrending} and \glsdisp{window}{windowing} were thoroughly discussed in sections~\ref{sec:detrend} and \ref{sec:window} respectively. Since some data is deleted and new data is added to the signal after every step, the \glsdisp{window}{windowing} cannot be performed only on the previously received signal segment, but has to be performed on the whole signal every time. \glsdisp{detrend}{Detrending} could be performed only on the previously received signal segment, but using it on the whole signal gives more possibilities since the same result as would be obtained by \glsdisp{detrend}{detrending} every new signal segment can be achieved by dividing the \glsdisp{detrend}{detrending} of the whole signal into segments with suitable length. In the application this division can be achieved by giving the \texttt{break} parameter which shows how many breakpoints to use that divide the signal into equal length segments for \glsdisp{detrend}{detrending}.
 
 There are more signal pipeline settings that can be changed through the \gls{GUI} of the application and now a brief overview of these settings will be given. See figure~\ref{fig:options_frame} for illustration of the application's \gls{GUI} for choosing signal pipeline components and parameters.
 
@@ -93,11 +93,19 @@ This section describes the user's choice identification method used in this appl
 
 Currently the application has three different \gls{feature extraction} methods that can be combined: widely known \gls{PSDA} and \gls{CCA} method and a method that is similar to the \gls{PSDA} method but the estimated \gls{power spectral density} is calculated not for each signal obtained from different channels but for the sum of all the signals from different channels. If only one channel is used, then this method works exactly the same as standard \gls{PSDA} method. In the \gls{GUI}, this method is called \texttt{sum \gls{PSDA}} method. Using this method makes sense, because \gls{FFT} is linear, meaning that the result will be the same if first the signals are summed up and then the \gls{power spectral density} is estimated and if first the \gls{power spectral density} is estimated separately for each channel and then the \gls{power spectral density} estimates for each channel are summed up.
 
-Unlike the sum \gls{PSDA} method, the standard \gls{PSDA} method calculates separate results for each channel. One way to identify user's choice with standard \gls{PSDA} method is to choose a command only if for all the different channels are the same. If all the methods do not give the same result, it is assumed that the signal was too noisy and the decision could not be made. In this case the application waits for new data.
+Unlike the sum \gls{PSDA} method, the standard \gls{PSDA} method calculates separate results for each channel. Both methods send the results to the \texttt{PostOffice} separately for each \gls{harmonic}. Which \glspl{harmonic} are used for the detection of which \gls{target} can be changed in the \gls{GUI}. It is also possible to get the result for the sum of different \glspl{harmonic}. The \gls{CCA} method is different from the \gls{PSDA} methods as it gives always only one result, even if multiple channels and multiple harmonics are used.
 
-All \gls{feature extraction} methods used in the application can be combined. In case of combining methods, the \gls{target} choosing algorithm is similar to the standard \gls{PSDA} method---all the methods have to give the same result. Currently the \gls{target} choosing method cannot be changed from the user interface. If different \gls{target} choosing method is needed, then the code has to be changed.
+Since multiple \gls{feature extraction} methods can be used together and some \gls{feature extraction} methods give more than one result, each \gls{feature extraction} result is given a certain weight which shows how much this result affects the final decision. For example, if \gls{CCA} and sum \gls{PSDA} method are used together and from the sum \gls{PSDA} results the result of the first \gls{harmonic} and the result of the sum of all used \glspl{harmonic} are used for each \gls{target}, then the weights could be 1 for each sum \gls{PSDA} result and 2 for \gls{CCA} result. Then the \gls{target} could be finally chosen for example if the sum of the weights for a \gls{target} is at least 3. This means actually that \gls{target} is chosen only if \gls{CCA} method chooses a \gls{target} and at least one of the sum \gls{PSDA} results is the same. This case could be easily implemented without using weights, but when using more \gls{feature extraction} methods, the conditions for choosing a target without using the weights will get more complicated and thus it is easier to use the weights to make the final decision.
 
-It is easy to modify this functionality by changing the code in handleFreqMessage method in PostOffice.py. This method receives the results of the \gls{feature extraction} methods through a connection similarly to the data accessing code discussed in section~\ref{sec:different_devices}. The results have already been organised into different data structures. There are results per each method, results per each signal pipeline, all the results counted and other data structures to make it easier to further develop the application.
+To further improve the performance of the \gls{BCI}, not only the weights of the last results, but the weights of multiple previous results are used to make the decision. Thus the condition would not be that if the sum of the weights of the last results is at least 3, but for example the sum of the weights of the three previous results is at least 9. If there are multiple \glspl{target} that satisfy the condition, then the \gls{target} with higher sum of the weights of the previous results is chosen. This case is not possible in the previously given example, since all the results always correspond to one \gls{target}. In the previous example the maximum sum of weights for one set of results is 4, therefore the sum of weights for the last three sets of results is $4\cdot 3=12$. If the condition is that this sum has to be higher than 9, then the maximum sum of weights for another \gls{target} is $12-9=3$.
+
+Finally, the \gls{target} is chosen if $n$ out of $m$ previous results that were obtained by comparing the sum the weights of $k$ previous results are the same. See figure that is right now missing for a graphical illustration of the \gls{target} identification method.
+
+%One way to identify user's choice with standard \gls{PSDA} method is to choose a command only if results of all the different channels are the same. If all the methods do not give the same result, it is assumed that the signal was too noisy and the decision could not be made. In this case the application waits for new data.
+
+%All \gls{feature extraction} methods used in the application can be combined. In case of combining methods, the \gls{target} choosing algorithm is similar to the standard \gls{PSDA} method---all the methods have to give the same result. Currently the \gls{target} choosing method cannot be changed from the user interface. If different \gls{target} choosing method is needed, then the code has to be changed.
+
+It is easy to modify \gls{target} identification method by changing the code in \texttt{handleFreqMessage} method in \texttt{PostOffice.py}. This method receives the results of the \gls{feature extraction} methods through a connection similarly to the data accessing code discussed in section~\ref{sec:different_devices}. The results have already been organised into different data structures. %There are results per each method, results per each signal pipeline, all the results counted and other data structures to make it easier to further develop the application.
 
 It is also worth mentioning that different \gls{feature extraction} methods can have different signal pipelines. For example it would not make sense to \gls{window} a signal that is later analysed using \gls{CCA}, but \glsdisp{window}{windowing} could be beneficial if the \gls{power spectral density} of the signal is later estimated analysed using \gls{PSDA} method. Thus the application has the functionality to use multiple signal pipelines with different options, which gives even more flexibility.
 
