Add results and stuff.

--- a/thesis/myStyle.sty
+++ b/thesis/myStyle.sty
@@ -13,7 +13,8 @@
 \usepackage{tikz-timing}
 \usetikzlibrary{shapes,arrows}
 %\usetikztiminglibrary{nicetabs} 
-\usepackage[estonian, english]{babel}
+\usepackage[estonian, english]{babel} % for lühikokkuvõte language has to be changed to estonian
+\usepackage{lscape} % for vertical table
 
 \usepackage{alphalph} 			% subfigure letters to plots
 \makeatletter
