--- a/thesis/tex/title_page.tex
+++ b/thesis/tex/title_page.tex
@@ -15,7 +15,7 @@
 \large{\bf Bachelor's Thesis (9 ECTS)}
 \vspace{63pt}
 \end{center}
-\hfill \Large{Supervisor: Ilya Kuzovkin}
+\hfill \Large{Supervisor: Ilya Kuzovkin, MSc}
 \vfill
 \begin{center}
 \large{Tartu 2015}
